src/test/ui/infinite-recursion-const-fn.stderr
error[E0080]: constant evaluation error
  --> $DIR/infinite-recursion-const-fn.rs:16:18
   |
16 | const ARR: [i32; a()] = [5; 6]; //~ ERROR constant evaluation error
   |                  ^^^ miri failed: reached the configured maximum number of stack frames

error: aborting due to previous error

